--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-08-02 18:13:18
+lastsearch = 2024-08-02 21:37:59
 
 [demxanh.com]
-match = 27.6%%
-title = Chiếu điều hòa cao su non Tencel vàng chanh
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-vang-chanh.html
+match = 34.5%%
+title = Chiếu điều hòa cao su non đa sắc tím than
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html?srsltid=AfmBOopBxBulu_ir3BxEBzTTI-xQyJUiikfqMob_Phrq1jS_QRopAwmO
 
 [tiki.vn]
 match = 20.7%%
 title = Mua Chiếu Điều Hòa Cao Su Non Latex Loại 1 Màu
-url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=136632823
+url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307862
 
 [demchinhhang.com]
 match = 51.7%%
@@ -24,7 +24,7 @@ url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 [www.lazada.vn]
 match = 13.8%%
 title = CHIẾU ĐIỀU HOÀ CHIẾU CAO SU NON 3D HOẠ TIẾT ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-chieu-cao-su-non-3d-hoa-tiet-tang-kem-2-vo-goi-i1328333458.html
+url = https://www.lazada.vn/products/chieu-dieu-hoa-chieu-cao-su-non-3d-hoa-tiet-tang-kem-2-vo-goi-i1328333458.html?srsltid=AfmBOop1oniIbJpz1g79KqV3GGT0LCQZwith2F_zZD4XGeVGUXpHxvCP
 
 [nanara.vn]
 match = 34.5%%
@@ -59,7 +59,7 @@ url = https://thegioidemviet.vn/chieu-dieu-hoa-cao-su-non-2d-plush/
 [foreverbedding.net]
 match = -37.9%%
 title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi?srsltid=AfmBOoqu5Gdhi6e2ZKF1mH-v1KMkpSS5vulTf1Ai1eyhvlQE4Fx0GDv9
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi?srsltid=AfmBOooNuPlynoSslnUvmPX4N82qJRqxu2XWFIIt2LAsRxEEhAkurcV7
 
 [russo.vn]
 match = -17.2%%
@@ -80,4 +80,9 @@ url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
 match = -13.8%%
 title = Chiếu điều hòa cao su non loại tốt - Mẫu 5 - Nệm Uy Tín
 url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
+
+[minamo.vn]
+match = -6.9%%
+title = Chiếu Băng Lạnh Tencel - Minamo Chăn Ga Gối
+url = https://minamo.vn/chieu-bang-tencel/
 
