--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-08-02 21:26:55
+lastsearch = 2024-08-02 21:31:48
 
 [demxanh.com]
-match = 43.5%%
-title = Chiếu điều hòa Nhật Bản
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban.html
+match = -3.3%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [suongtuyet.com]
 match = -13.3%%
@@ -63,8 +63,8 @@ url = http://anhp.vn/chieu-dieu-hoa--hieu-chuan-de-rut-tien-dung-d18928.html
 
 [thegioinem.com]
 match = 16.7%%
-title = Chiếu điều hòa cao su non là gì? Nên mua không?
-url = https://thegioinem.com/chieu-dieu-hoa-cao-su-non.html
+title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
+url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 
 [xn--nekiovitnam-y69e.vn]
 match = 3.3%%
