--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-02 14:28:17
+lastsearch = 2024-08-02 21:31:27
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -42,14 +42,14 @@ title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
 url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
 [shopee.vn]
-match = 31.2%%
-title = Chiếu lác màu xuất khấu
-url = https://shopee.vn/Chiếu-lác-màu-xuất-khấu-i.275355238.5749616844
+match = 0.0%%
+title = Chiếu Lác Nhựa Mát Mẻ Bền Đẹp
+url = https://shopee.vn/Chiếu-Lác-Nhựa-Mát-Mẻ-Bền-Đẹp-i.58697470.5071220147
 
 [www.thegioididong.com]
-match = -181.2%%
-title = Tổng hợp đáp án Brain Out màn 1 đến 225 (Có video ...
-url = https://www.thegioididong.com/game-app/tong-hop-dap-an-brain-out-man-101-den-150-co-video-huong-dan-1249674
+match = -193.8%%
+title = Samsung Galaxy A14 4GB - Chính hãng, giá tốt, có trả góp
+url = https://www.thegioididong.com/dtdd/samsung-galaxy-a14-4gb
 
 [saigontourist.edu.vn]
 match = -100.0%%
