--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-02 17:47:28
+lastsearch = 2024-08-02 21:35:35
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -18,8 +18,8 @@ url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
 match = -187.5%%
-title = 21-08-2023 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
-url = https://www.facebook.com/soctrangtv/videos/21-08-2023-thời-sự-chiều-18h30/1110320116612660/
+title = 08-11-2022 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
+url = https://www.facebook.com/soctrangtv/videos/08-11-2022-thời-sự-chiều-18h30/1168759537402748/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -187,9 +187,9 @@ title = Thái Sơn Bắc bám đuổi đội dẫn đầu
 url = https://nhandan.vn/thai-son-bac-kien-tri-bam-duoi-thai-son-nam-thanh-pho-ho-chi-minh-post816958.html
 
 [hanoimoi.vn]
-match = -225.0%%
-title = Hà Nội mưa to đến rất to, có thể úng ngập đô thị từ chiều ...
-url = https://hanoimoi.vn/ha-noi-mua-to-den-rat-to-co-the-ung-ngap-do-thi-tu-chieu-toi-nay-8-6-668752.html
+match = -200.0%%
+title = Việt Nam - Hàn Quốc kết nối giao thương về công nghệ ...
+url = https://hanoimoi.vn/viet-nam-han-quoc-ket-noi-giao-thuong-ve-cong-nghe-thong-tin-673757.html
 
 [thanhnien.vn]
 match = -200.0%%
@@ -197,9 +197,9 @@ title = Người đàn ông đi lạc trong rừng Quảng Nam suốt 4 ngày ..
 url = https://thanhnien.vn/nguoi-dan-ong-di-lac-trong-rung-quang-nam-suot-4-ngay-chi-uong-nuoc-cam-hoi-185240608180716305.htm
 
 [baotintuc.vn]
-match = -193.8%%
-title = Ấn tượng với tầm nhìn và phong cách của Tổng Bí thư ...
-url = https://baotintuc.vn/thoi-su/gioi-hoc-gia-tai-singapore-an-tuong-voi-tam-nhin-va-phong-cach-cua-tong-bi-thu-nguyen-phu-trong-20240724080522401.htm
+match = -200.0%%
+title = Nâng cao hiệu quả hoạt động vận động, tập hợp cựu chiến ...
+url = https://baotintuc.vn/thoi-su/nang-cao-hieu-qua-hoat-dong-van-dong-tap-hop-cuu-chien-binh-o-co-so-20240802170325509.htm
 
 [tamanhhospital.vn]
 match = -212.5%%
@@ -352,9 +352,9 @@ title = Doanh nhân Mỹ dần bỏ golf, chơi pickleball
 url = https://vnexpress.net/doanh-nhan-my-dan-bo-golf-choi-pickleball-4771425.html
 
 [cand.com.vn]
-match = -87.5%%
-title = Lần đầu “chơi” thuốc lắc, chết vì sốc thuốc
-url = https://cand.com.vn/Ban-tin-113/Lan-dau-choi-thuoc-lac-chet-vi-soc-thuoc-i126178/
+match = -212.5%%
+title = Công an xã Đồng Lạc nhanh chóng tìm gia đình cho cụ già ...
+url = https://cand.com.vn/doi-song/cong-an-xa-dong-lac-nhanh-chong-tim-gia-dinh-cho-cu-gia-89-tuoi-di-lac-i739391/
 
 [baolangson.vn]
 match = -175.0%%
@@ -815,4 +815,14 @@ url = https://petrovietnam.petrotimes.vn/pvcfc-runners-to-chuc-huan-luyen-chay-b
 match = -181.2%%
 title = Bốc thăm vòng 1 V-League 2024-2025: Hải Phòng "đại ...
 url = https://baocaovien.vn/tin-tuc/boc-tham-vong-1-v-league-2024-2025-hai-phong-dai-chien-cong-an-ha-noi/145219.html
+
+[lsvn.vn]
+match = -200.0%%
+title = Khám phá tiện ích chăm sóc sức khỏe tại “vùng đất Blue ...
+url = https://lsvn.vn/kham-pha-tien-ich-cham-soc-suc-khoe-tai-vung-dat-blue-zones-dau-tien-cua-viet-nam-1722596721.html
+
+[www.dongnai.gov.vn]
+match = -131.2%%
+title = Những điều cần biết về ngộ độc khí CO(02/08/2024)
+url = https://www.dongnai.gov.vn/Pages/newsdetail.aspx?NewsId=45824&CatId=109
 
