--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-08-02 17:37:01
+lastsearch = 2024-08-02 21:39:21
 
 [chieutrelanlan.com]
 match = -17.9%%
@@ -23,13 +23,13 @@ url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
 
 [shopee.vn]
 match = -3.6%%
-title = chiếu trúc hạt giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu trúc hạt
+title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
+url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-mắt-ngọc-hạt-vàng-bóng-đẹp-loại-1-i.121274905.7879754206
 
 [www.diepxuan.com]
 match = 28.6%%
 title = Chiếu trúc Quế Lâm II 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-truc-que-lam-ii-180x200.html
+url = https://www.diepxuan.com/chieu-truc-que-lam-ii-180x200.html?srsltid=AfmBOor0eILb8pr3XLYy3OAF4moPfXms5lAjukmZf7WZIexfuFOSKIHL
 
 [www.lazada.vn]
 match = 70.4%%
@@ -47,9 +47,9 @@ title = Mua Chiếu trúc hạt Quế Lâm
 url = https://tiki.vn/chieu-truc-hat-que-lam-p87383232.html?spid=170118061/
 
 [www.sendo.vn]
-match = -17.9%%
-title = Chiếu Trúc Hạt Quế Lâm 1m2, 1m5, 1m6, 1m8, 2m2 [Được ...
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-1m2-1m5-1m6-1m8-2m2-duo-c-kie-m-ha-ng-32003669-117250267.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1721952000324_undefined_-1_cateLvl2_0_89_23_-1
+match = -10.7%%
+title = Chiếu Trúc Hạt Quế Lâm 1m2, 1m5, 1m6, 1m8, 2m2 - ct112
+url = https://www.sendo.vn/chieu-truc-hat-que-lam-1m2-1m5-1m6-1m8-2m2-32003669.html?source_block_id=feed&source_page_id=product_detail&source_info=pwa_60_1690329600448_6a818510-b1f7-48b8-b49f-9ce3d3238d35_-1_ishyperproductdetail0_0_41_26_-1
 
 [chieutrucsaigon.com]
 match = 32.1%%
