--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-02 20:33:46
+lastsearch = 2024-08-02 21:42:39
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = How I gutted my HOA : r/pettyrevenge
 url = https://www.reddit.com/r/pettyrevenge/comments/10fgrkx/how_i_gutted_my_hoa/
 
 [www.quora.com]
-match = -194.1%%
-title = What are my options of being blatantly singled out in an ...
-url = https://www.quora.com/What-are-my-options-of-being-blatantly-singled-out-in-an-HOA-I-received-a-citation-for-a-sign-and-I-have-and-five-other-neighbors-next-to-me-with-same-signage-I-am-a-single-widowed-woman-and-tired-of-the-three-men
+match = -176.5%%
+title = What can I do when a Homeowner's Association pops up in ...
+url = https://www.quora.com/What-can-I-do-when-a-Homeowners-Association-pops-up-in-my-neighborhood-I-purchased-my-home-years-ago-and-I-specifically-wanted-somewhere-that-a-HOA-didnt-exist-Is-my-only-option-to-move-The-rules-have-already-been
 
 [lauragoodsonart.com]
 match = 47.1%%
