--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-08-02 17:40:10
+lastsearch = 2024-08-02 21:39:01
 
 [www.gov.uk]
 match = -200.0%%
@@ -1170,4 +1170,9 @@ url = https://www.fm.bank/
 match = -73.3%%
 title = How do I apply for a passport?
 url = https://immigration.gov.bb/pages/passport.aspx
+
+[www.mlssoccer.com]
+match = -220.0%%
+title = MLSsoccer.com - The Official Site of Major League Soccer
+url = https://www.mlssoccer.com/
 
