--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-02 18:17:30
+lastsearch = 2024-08-02 21:46:46
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -157.1%%
-title = The Linguist and Educational Review - Page 15 - Google Books Result
-url = https://books.google.com/books?id=V3IoVBZlBtsC&pg=RA13-PA15&lpg=RA13-PA15&dq=nem+di+a+mon+9f+16+re&source=bl&ots=MUAjqTWIbf&sig=ACfU3U2rvhg3Qw7vkTKoN9X_6eXUSqrnJQ&hl=en&sa=X&ved=2ahUKEwj5vPPIl9aHAxVZK0QIHQA-ODwQ6AF6BAhAEAM
+match = -38.1%%
+title = A Dictionary of Music and Musicians
+url = https://books.google.com/books?id=RgBKAQAAMAAJ&pg=PA308&lpg=PA308&dq=nem+di+a+mon+9f+16+re&source=bl&ots=9D8EkHHYod&sig=ACfU3U03tgyEdLgO66puQbQRmPFxobLDhQ&hl=en&sa=X&ved=2ahUKEwixtpisxtaHAxXkxuYEHa23B1oQ6AF6BAgeEAM
 
 [www.diepxuan.com]
 match = -81.0%%
