--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-02 18:40:17
+lastsearch = 2024-08-02 21:45:31
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -12,9 +12,9 @@ title = Bộ ga chun LIVING - LV18
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
 
 [foreverbedding.net]
-match = -57.1%%
-title = Bộ ga chun chần mặt Velina V18 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v18
+match = -33.3%%
+title = Bộ ga chun Velina V18 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-velina-v18?srsltid=AfmBOor2g8pCI5kRt4BYdcJdb1ajap0K6WpAovhMevqf0lfAmDxxYVsU
 
 [shopee.vn]
 match = -114.3%%
@@ -22,9 +22,9 @@ title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
 url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
 
 [changagoidemsonghong.com]
-match = -71.4%%
-title = Chăn ga gối mã DN18-05 vải MicroSH khuyến mại -50%%
-url = https://changagoidemsonghong.com/chan-ga-goi-micro-dn1805
+match = -14.3%%
+title = Chăn ga gối Home mã H17-048 Sale 30%%
+url = https://changagoidemsonghong.com/chan-ga-goi-home-h17-048
 
 [demsonghonghanoi.com]
 match = -14.3%%
@@ -39,7 +39,7 @@ url = https://songhong.info/chan-ga-goi-uc018
 [www.diepxuan.com]
 match = -9.5%%
 title = Bộ chun xoa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-xoa-180x200.html
+url = https://www.diepxuan.com/bo-chun-xoa-180x200.html?srsltid=AfmBOorHWhOVAxGFOOcOluWE90FzG_oip-LOPK66iGojz0szBviicOqj
 
 [hoangkimhome.com]
 match = -90.5%%
