--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-08-02 18:20:57
+lastsearch = 2024-08-02 21:50:39
 
 [www.instagram.com]
-match = -23.1%%
-title = Hoi Chan (@hoichandraws)
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -223.1%%
+title = Yuki Hoi (@hoisoki) • Instagram photos and videos
+url = https://www.instagram.com/hoisoki/?hl=en
 
 [www.linkedin.com]
 match = -192.3%%
