--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -37,9 +37,9 @@ title = Đệm lò xo King Koil Cloud Firm
 url = https://sieuthidemhanquoc.com.vn/dem-lo-xo-king-koil-cloud-firm-1470
 
 [suongtuyet.com]
-match = 57.8%%
-title = Nệm Lò Xo Everon King Koil Cloud Firm - 27 cm
-url = https://suongtuyet.com/nem-lo-xo-everon-king-koil-cloud-firm-27-cm
+match = -7.7%%
+title = Nệm Lò Xo Everon - Đà Nẵng
+url = https://suongtuyet.com/nem-lo-xo-everon
 
 [www.everonqb.com]
 match = 57.4%%
