--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-02 21:25:15
+lastsearch = 2024-08-02 21:44:29
 
 [demxanh.com]
 match = -22.7%%
@@ -17,9 +17,9 @@ title = Bộ thảm ghế gỗ 1 dài 2 ngắn
 url = https://demre.com.vn/bo-tham-ghe-go-1-dai-2-ngan-6
 
 [decoviet.vn]
-match = 22.2%%
-title = Thảm Sofa Biên Hòa
-url = https://decoviet.vn/tham-sofa-bien-hoa/
+match = 23.8%%
+title = Thảm Sofa Phòng Khách
+url = https://decoviet.vn/tham-phong-khach/
 
 [demolympia.com]
 match = -40.9%%
@@ -27,8 +27,8 @@ title = Ga chống thấm Olympia cotton cao cấp mới
 url = https://demolympia.com/ga-chong-tham-olympia-cotton-cao-cap-moi/
 
 [thegioidemonline.vn]
-match = -50.0%%
-title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội
+match = -109.1%%
+title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội - Chăn ga gối
 url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 
 [ru9.vn]
@@ -42,9 +42,9 @@ title = Thảm trải sàn phòng khách trẻ trung năng động TBD2582
 url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 
 [www.diepxuan.com]
-match = 50.0%%
-title = Điệp Xuân Thảm giường nỉ 150x190
-url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
+match = 36.4%%
+title = Thảm giường nỉ 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
 
 [www.lazada.vn]
 match = -77.3%%
@@ -57,8 +57,8 @@ title = Thảm trải chân giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải chân giường
 
 [cafeland.vn]
-match = -45.5%%
-title = Kích thước giường ngủ chuẩn theo phong thủy
+match = -109.1%%
+title = Kích thước giường ngủ chuẩn theo phong thủy - CafeLand.Vn
 url = https://cafeland.vn/xu-huong/kich-thuoc-giuong-ngu-chuan-theo-phong-thuy-91091.html
 
 [www.everonvn.vn]
