--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-08-03 00:45:24
+lastsearch = 2024-08-03 01:49:43
 
 [demxanh.com]
 match = -6.9%%
 title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon.html
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon.html?srsltid=AfmBOor7Ol5cvEct_LMWgixWezklGN0nQV9A_-nN4lS2Z-mPqWoCx8Jx
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -34,7 +34,7 @@ url = https://shopee.vn/Bộ-chăn-ga-vỏ-gối-lụa-5-món-Skysilk-hàng-Pyeo
 [thegioidemonline.com]
 match = 34.5%%
 title = Bộ chăn ga gối Pyeoda LCHARME GẤM 7 món
-url = https://thegioidemonline.com/bo-chan-ga-goi-pyeoda-lcharme-gam-7-mon.html
+url = https://thegioidemonline.com/bo-chan-ga-goi-pyeoda-lcharme-gam-7-mon.html?srsltid=AfmBOorEMsg-LenF1ZJ33bGGODrqYkKqgN8iaaBtfm7s0ebM8jePUipt
 
 [dem4mua.vn]
 match = 6.9%%
