--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -22,9 +22,9 @@ title = Chiếu Điều Hoà Băng Lạnh (2 màu)
 url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 
 [www.lazada.vn]
-match = 13.8%%
-title = CHIẾU ĐIỀU HOÀ CHIẾU CAO SU NON 3D HOẠ TIẾT ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-chieu-cao-su-non-3d-hoa-tiet-tang-kem-2-vo-goi-i1328333458.html
+match = -17.2%%
+title = chiếu điều hòa cao su non 5d mềm mịn thoáng mát hàng ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-5d-mem-min-thoang-mat-hang-nhap-khau-loai-1size-160x200-180x200-220x200-i1916363851.html
 
 [nanara.vn]
 match = 34.5%%
@@ -32,9 +32,9 @@ title = Set chiếu điều hòa cao su Tencel - NANARA
 url = https://nanara.vn/p/set-chieu-dieu-hoa-cao-su-tencel/
 
 [entershopping.vn]
-match = 3.4%%
-title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
-url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
+match = -13.8%%
+title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
+url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
 
 [chiaki.vn]
 match = 13.8%%
@@ -59,7 +59,7 @@ url = https://thegioidemviet.vn/chieu-dieu-hoa-cao-su-non-2d-plush/
 [foreverbedding.net]
 match = -37.9%%
 title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi?srsltid=AfmBOooNuPlynoSslnUvmPX4N82qJRqxu2XWFIIt2LAsRxEEhAkurcV7
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 
 [russo.vn]
 match = -17.2%%
