--- a/images/ga-phu-es1807-180x200/config.ini
+++ b/images/ga-phu-es1807-180x200/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/ga-phu-es1807-180x200.html
 lastopen = 2024-06-07 01:02:20
 
 [search]
-lastsearch = 2024-08-03 00:38:07
+lastsearch = 2024-08-03 01:50:25
 
 [everonvn.com.vn]
-match = 4.8%%
-title = Bộ Everon Es1804 - Esmeranda
+match = -114.3%%
+title = Bộ Everon Es1804 - Esmeranda - chăn ga gối đệm Everon
 url = https://everonvn.com.vn/everon/606/bo-everon-es1804
 
 [everonhanoi.vn]
