--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-08-02 17:50:11
+lastsearch = 2024-08-03 01:38:37
 
 [www.ncbi.nlm.nih.gov]
 match = -410.0%%
@@ -47,9 +47,9 @@ title = REN 12 | Acupressure treatment, Acupuncture ...
 url = https://www.pinterest.com/pin/ren-12--501307002254190003/
 
 [yinyanghouse.com]
-match = -400.0%%
-title = Acupuncture Point Foundations Categorizations and Theory
-url = https://yinyanghouse.com/theory/acupuncturepoints/point_categories/
+match = -140.0%%
+title = UB 12 Acupuncture Point Theory
+url = https://yinyanghouse.com/theory/acupuncturepoints/ub12/
 
 [stramcenter.com]
 match = -230.0%%
