--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-08-03 00:35:47
+lastsearch = 2024-08-03 01:40:19
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -83,8 +83,8 @@ url = https://sbg.colorado.gov/sites/sbg/files/documents/All_State_Liquor_Licens
 
 [www.quora.com]
 match = -95.5%%
-title = Could California be considered the most morally ...
-url = https://www.quora.com/Could-California-be-considered-the-most-morally-degenerate-US-state
+title = What are some states that are better than California?
+url = https://www.quora.com/What-are-some-states-that-are-better-than-California
 
 [archives.sandiegoreader.com]
 match = -95.5%%
@@ -167,9 +167,9 @@ title = La souris noire morlaix [thVqRd]
 url = https://www.nitrc.org/links/?group_id=51&url=https://9215487.xn--h1aakbimdbl.xn--p1ai/5428367u6fe43a
 
 [www.ncbi.nlm.nih.gov]
-match = 9.1%%
-title = Bacterial Terpenome - PMC
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8107197/
+match = -113.6%%
+title = Molecular Biology of Lung Cancer: Clinical Implications
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3367865/
 
 [www.gsa.gov]
 match = -185.7%%
@@ -377,8 +377,8 @@ title = Sheet1
 url = https://njcleanenergy.com/files/file/NJSSB/SSB Projects 2019-11-12.xlsx
 
 [search.baldwinpark.com]
-match = -150.0%%
-title = Untitled
+match = 0.0%%
+title = Laserfiche WebLink
 url = https://search.baldwinpark.com/WebLink/DocView.aspx?id=147742&dbid=0&repo=BALDWINPARK
 
 [documents.deq.utah.gov]
