--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-08-02 22:40:22
+lastsearch = 2024-08-03 01:40:40
 
 [xoptraisan.info]
-match = -57.9%%
-title = xoptraisan Resources and Information.
-url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
+match = -115.8%%
+title = Thảm xốp Tường Lâm - thương hiệu hàng Việt Nam chất ...
+url = https://xoptraisan.info/tham-xop-tuong-lam-cao-cap
 
 [thamaulac.com.vn]
 match = -31.6%%
