--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-03 00:31:16
+lastsearch = 2024-08-03 01:50:46
 
 [www.diepxuan.com]
 match = -131.2%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -6.2%%
-title = Huda Beauty Lip Stain
-url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
+match = -31.2%%
+title = Huda Beauty Best Lip Liner
+url = https://www.tiktok.com/discover/huda-beauty-best-lip-liner
 
 [archiveofourown.org]
 match = -137.5%%
